<resources>
    <string name="app_name">Olympics</string>
    <string name="olympics">Olympics</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">sign up</string>
    <string name="google">google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone_number">Sign up with phone number</string>
    <string name="click_for_sign_up">Click for sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_phone_number">Sign in with phone number</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="news">News</string>
    <string name="sports">Sports</string>
    <string name="stats">Stats</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
</resources>