<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:menuCategory="secondary"
            android:id="@+id/navNews"
            android:icon="@drawable/ic_baseline_news_30"
            android:title="@string/news" />
        <item
            android:menuCategory="secondary"
            android:id="@+id/navSports"
            android:icon="@drawable/ic_baseline_sports_24"
            android:title="@string/sports" />
        <item
            android:menuCategory="secondary"
            android:id="@+id/navStats"
            android:icon="@drawable/ic_baseline_date_range_"
            android:title="@string/stats" />
    </group>

    <item
        android:title="@string/contact_us"
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/feedback"
                android:title="@string/feedback"
                android:menuCategory="secondary"
                android:icon="@drawable/ic_baseline_feedback_24"/>
        </menu>
    </item>
</menu>
