<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navNews">

    <fragment
        android:id="@+id/navNews"
        android:name="com.example.olympics.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navSports"
        android:name="com.example.olympics.ui.sports.SportsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_sports" />

    <fragment
        android:id="@+id/navStats"
        android:name="com.example.olympics.ui.stats.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />
</navigation>